PRL-4225 - fixed sonar code smell issue